<resources>
    <string name="app_name">Dream Catcher</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to  Show Dream page-->
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <!-- Strings related to  New Dream entry-->
    <string name="save_dream">Save dream</string>
    <string name="dream_text">Write down your dream</string>
    <string name="button_neutral">NEUTRAL</string>
    <string name="button_good">GOOD</string>
    <string name="button_bad">BAD</string>
    <string name="prompt_mood">How was your dream?</string>
    <string name="title_prompt">Give a title and write your dream</string>
    <string name="title_hint">Dream title...</string>

    <!-- Strings related to  Main Page -->
    <string name="welcome_text">Welcome \n to Dream Catcher</string>
    <string name="new_dream_prompt">Add a new Dream</string>
    <string name="view_dreams_prompt">View Previous Dreams</string>
</resources>