<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NewDreamActivity">

    <TextView
        android:id="@+id/title_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/title_prompt"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dreamTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/title_hint"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/dreamInput"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/dream_text"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="7"
        android:padding="10dp" />

    <TextView
        android:id="@+id/moodQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/prompt_mood"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">


        <Button
            android:id="@+id/bad_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mood_buttons_margin"
            android:background="@android:color/holo_red_light"
            android:hint="@string/button_bad"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/neutral_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mood_buttons_margin"
            android:background="@android:color/holo_orange_light"
            android:hint="@string/button_neutral"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/good_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mood_buttons_margin"
            android:background="@android:color/holo_green_light"
            android:hint="@string/button_good"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save_dream"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

</LinearLayout>