<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Welcome_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:paddingVertical="60dp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F9A825"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/new_dream_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_buttons_margin"
        android:background="#FDC500"
        android:fontFamily="casual"
        android:text="@string/new_dream_prompt"
        android:textAlignment="center"
        android:padding="20dp"
        android:textColor="#1565C0"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/view_dreams_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_buttons_margin"
        android:background="#FFD500"
        android:fontFamily="casual"
        android:text="@string/view_dreams_prompt"
        android:textAlignment="center"
        android:textColor="#1565C0"
        android:padding="20dp"
        android:textSize="18sp"
        android:textStyle="bold" />



</LinearLayout>